# hw3-Hc72

./: .gitignore  Makefile  README.md  ai_documentation.txt  index.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
